rename ind in html red

--- a/example-red.html
+++ b/example-red.html
@@ -17,7 +17,7 @@
     <h1>Learning to work with SASS</h1>
     <nav>
         <a href="example-red.html">Red</a>
-        <a href="example.html">Blue</a>
+        <a href="index.html">Blue</a>
     </nav>
 </header>
 
